# Sandbox-evaluation

./: .env.example  .gitignore  README.md  browser-integration.md  pyproject.toml
docker/: Dockerfile
examples/agent_demo/: model_script.yaml  task.md  task.yaml
examples/agent_demo/assets/: company_metrics.csv
examples/basic/: task.yaml
examples/basic/assets/: input.txt  process.py
src/oneoxygen_sandbox/: __init__.py  __main__.py  agent.py  browser.py  browser_policies.py  cli.py  config.py  coordinator.py  docker_adapter.py  errors.py  filesystem.py  models.py  session.py
src/oneoxygen_sandbox/model_adapters/: __init__.py  base.py  openai.py  registry.py  scripted.py
src/oneoxygen_sandbox/prompts/: standard_agent_v1.txt
src/oneoxygen_sandbox/tools/: __init__.py  base.py  browser.py  dispatcher.py  registry.py
tests/: conftest.py  test_agent_runner.py  test_browser.py  test_browser_policies.py  test_cli_phase3.py  test_config.py  test_filesystem.py  test_model_contracts.py  test_models.py  test_openai_adapter.py  test_record.py  test_scripted_adapter.py  test_session.py  test_tools.py
tests/integration/: test_agent_runner_docker.py  test_docker_sandbox.py
tests/live/: test_openai_live.py
